# RED4ext

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md
.github/workflows/: build.yml  cpp-build.yml  cpp-format.yml  release.yml
cmake/: ConfigureAndIncludeRedscript.cmake  ConfigureAndIncludeSpdlog.cmake  ConfigureDefaultOutputDirectories.cmake  ConfigureResourceRc.cmake  ConfigureVersionFile.cmake  ConfigureVersionFromGit.cmake  TargetAppendOutputDirectory.cmake  TargetOutputDirectory.cmake
cmake/templates/: Resource.rc.in  Version.cpp.in
src/dll/: Addresses.cpp  Addresses.hpp  App.cpp  App.hpp  CMakeLists.txt  Config.cpp  DetourTransaction.cpp  DetourTransaction.hpp  DevConsole.cpp  Image.cpp  Image.hpp  Main.cpp  MemoryProtection.cpp  Paths.cpp  PluginBase.cpp  PluginBase.hpp  ScriptValidationError.cpp  Utils.cpp  Utils.hpp  Version.hpp  stdafx.hpp
src/dll/Detail/: AddressHashes.hpp
src/dll/Hooks/: AssertionFailed.cpp  CGameApplication.cpp  CollectSaveableSystems.cpp  ExecuteProcess.cpp  ExecuteProcess.hpp  InitScripts.cpp  LoadScripts.cpp  Main_Hooks.cpp  QuickExit.cpp  QuickExit.hpp  ValidateScripts.cpp  ValidateScripts.hpp  WinMain.cpp  WinMain.hpp  gsmState_SessionActive.cpp  gsmState_SessionActive.hpp
src/dll/ScriptCompiler/: ScriptCompilerFailure.hpp  ScriptCompilerOutput.hpp  ScriptCompilerSettings.cpp  ScriptCompilerSettings.hpp  ScriptCompilerSourceRef.hpp
src/dll/States/: ShutdownState.cpp
src/dll/Systems/: HookingSystem.cpp  HookingSystem.hpp  LoggerSystem.cpp  LoggerSystem.hpp  PluginSystem.cpp  PluginSystem.hpp  ScriptCompilationSystem.cpp  ScriptCompilationSystem.hpp  StateSystem.cpp  StateSystem.hpp
src/dll/v0/: Funcs.cpp  Funcs.hpp  Plugin.cpp
src/dll/v1/: Funcs.cpp  Funcs.hpp  Logger.cpp  Logger.hpp  Plugin.cpp  Plugin.hpp
src/loader/: CMakeLists.txt  stdafx.hpp
src/playground/: CMakeLists.txt  Main.cpp
